<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" 
            android:textStyle="bold"
            android:text="@string/titulo" >
        </TextView>
 
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idRecurso" >
        </TextView>
 
        <EditText
            android:id="@+id/idRecurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloRecurso" >
        </TextView>
 
        <EditText
            android:id="@+id/titRecurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editorial" >
        </TextView>
 
        <EditText
            android:id="@+id/editRecurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anio" >
        </TextView>
 
        <EditText
            android:id="@+id/anioRecurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_span="2" />
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado" >
        </TextView>
 
        <EditText
            android:id="@+id/estRecurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>
 
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <Button
            android:id="@+id/bn_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buscarData"
            android:text="@string/buscar" />
 

         
        <Button
            android:id="@+id/bn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearControls"
            android:text="@string/limpiar" />
         
    </TableRow>

</TableLayout>